# ws

./: .env
webservice/: Cargo.toml  a.html
webservice/src/: errors.rs  main.rs  routers.rs  state.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
